--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10",
+    "luxon": "^3.3.0",
     "pinia": "^2.0.33",
     "postcss": "^8",
     "tailwindcss": "^3.3.1",
